[tool.poetry]
name = "pyrun_docs"
version = "0.1.0"
description = ""
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
